--- a/src/common/styles/global.styl
+++ b/src/common/styles/global.styl
@@ -46,7 +46,8 @@ modalShadow = 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1
 monoFont = ui-monospace, SFMono-Regular, "SF Mono", "Roboto Mono", Menlo, Consolas, "Liberation Mono", monospace
 
 // ▼▼ 通用 ▼▼
-
+// *:focus-visible //排查问题
+//     outline: 2px red solid !important
 // ▼▼ 按钮 ▼▼
 .ant-btn
     transition: ringTransition
@@ -56,14 +57,17 @@ monoFont = ui-monospace, SFMono-Regular, "SF Mono", "Roboto Mono", Menlo, Consol
     font-size: 16px
     margin: 0
     transition: buttonTransition
-
     div
         display: none
-
     &:not(:disabled):focus-visible
         box-shadow: baseRing
         outline: none
         transition: ringTransition
+    &:focus-visible
+        box-shadow: baseRing
+        border-radius: baseRounded
+        transition: ringTransition
+
 
 
 .ant-btn-default
@@ -283,10 +287,26 @@ input
     font-weight: 500
     & p:first-child // 聊天气泡的名字
         font-weight: 400
+    animation: bubbleLeftShow .2s ease
+    @keyframes bubbleLeftShow 
+        from
+            opacity: 0
+            transform: translate(-10px, 15px) scale(0.96)
+        to
+            opacity: 1
+            transform: translate(0px, 0px) scale(1)
 
 .bubble-right // User 的聊天气泡
   align-self: flex-end
   background: brand4
+  animation: bubbleRightShow .2s ease
+//   @keyframes bubbleRightShow 
+//         from
+//             opacity: 0.5
+//             transform: translate(10px, 15px) scale(0.96)
+//         to
+//             opacity: 1
+//             transform: translate(0px, 0px) scale(1)
   &>p
     font-weight: 400
 
@@ -297,6 +317,14 @@ input
     background-color: warning2
     text-align: center
     font-weight: 400
+    // animation: bubbleCenterShow .2s ease
+    // @keyframes bubbleCenterShow 
+    //     from
+    //         opacity: 0.5
+    //         transform: translateY(15px) scale(0.96)
+    //     to
+    //         opacity: 1
+    //         transform: translateY(0px) scale(1)
 
 .bubble-name
     color: gray3
