feat: 弹窗背景可点击
已实现。

--- a/src/common/styles/global.styl
+++ b/src/common/styles/global.styl
@@ -120,6 +120,11 @@ input
 // ▲▲ 通用 ▲▲
 
 // ▼▼ 弹窗 ▼▼
+.ant-modal-root .ant-modal-wrap, .ant-modal-wrap.root-modal-wrap // 自定义类名
+    width: 360px
+    height: 590px
+    overflow: visible
+
 .ant-modal .ant-modal-content
     padding: 0
     border-radius: largeRounded
