--- a/src/content/content.styl
+++ b/src/content/content.styl
@@ -10,3 +10,7 @@
         background: url('images/icon.png')
         background-size: 100% 100%
         cursor: pointer
+.ant-modal-wrap.root-modal-wrap // 自定义类名
+    width: 360px !important
+    height: 590px !important
+    overflow: visible !important
