--- a/src/content/content.styl
+++ b/src/content/content.styl
@@ -7,7 +7,7 @@
         right: 20px
         width: 50px
         height: 50px
-        background: url('images/icon.png')
+        background: url('images/sql_helper_logo.png')
         background-size: 100% 100%
         cursor: pointer
 html, body, #root
