气泡文字样式

--- a/src/content/content.styl
+++ b/src/content/content.styl
@@ -321,7 +321,7 @@ div.P-chat
         flex-shrink: 0 // 禁止缩小
         align-self: flex-start // 改为左对齐
         max-width: 90%
-        word-wrap: break-word
+        white-space: pre-line
         font-weight: 500
         & p:first-child // 聊天气泡的名字
             font-weight: 400
