--- a/src/content/content.styl
+++ b/src/content/content.styl
@@ -1,15 +1,3 @@
-// 注入当前页面的悬浮球样式
-.CRX-content
-    .content-entry
-        position: fixed
-        z-index: 9999
-        bottom: 100px
-        right: 20px
-        width: 50px
-        height: 50px
-        background: url('images/sql_helper_logo.png')
-        background-size: 100% 100%
-        cursor: pointer
 html, body, #root
     height: 100%
     line-height: 1.2
@@ -56,6 +44,58 @@ ringTransition = 0.06s ease
 buttonTransition = color 0.06s, background-color 0.06s
 
 monoFont = ui-monospace, SFMono-Regular, "SF Mono", "Roboto Mono", Menlo, Consolas, "Liberation Mono", monospace
+
+
+// 注入当前页面的悬浮球样式
+.CRX-content
+    .content-entry-space
+        position: absolute
+        width: 176px
+        height: 52px
+        background: white
+        opacity: 0
+        right: -40px
+        border-top-left-radius: 30px
+        border-bottom-left-radius: 30px
+    .content-warp
+        display: flex
+        position: fixed
+        z-index: 9999
+        bottom: 100px
+        right: -92px
+        background: white
+        align-items: center
+        border-radius: 30px
+        padding: 5px
+        color: gray2
+        font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji'
+        font-size: 13px
+        font-weight: 500
+        cursor: pointer
+        line-height: 1.15
+        border: 1px solid gray6
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.13), 0 2px 4px -2px rgba(0, 0, 0, 0.13)
+        transition: transform .1s cubic-bezier(0.33, 1, 0.68, 1), box-shadow .2s cubic-bezier(0.33, 1, 0.68, 1), right .3s cubic-bezier(0.34, 1.26, 0.64, 1),
+        &:hover
+            transform: scale(1.05)
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.13), 0 4px 6px rgba(0, 0, 0, 0.13)
+            right: 20px
+        &:active
+            transform: scale(0.96)
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.13), 0 4px 6px rgba(0, 0, 0, 0.13)
+        .content-entry
+            background: url('images/sql_helper_logo.png')
+            width: 40px
+            height: 40px
+            background-size: 70% 70%
+            background-repeat: no-repeat
+            background-position: 50% 50%
+            padding: 10px
+            border-radius: 100%
+            
+        .content-entry-text
+            padding-left: 2px
+            padding-right: 10px
 
 // ▼▼ 通用 ▼▼
 div.P-configuration, div.P-chat
