--- a/src/content/content.styl
+++ b/src/content/content.styl
@@ -441,7 +441,7 @@ div.P-chat
                     min-height: 0
                     transition: height .2s
         textarea
-            height: 100%
+            height: 100% !important
             transition: height .2s
             resize: none
             border: none
