--- a/src/content/content.styl
+++ b/src/content/content.styl
@@ -45,6 +45,7 @@ buttonTransition = color 0.06s, background-color 0.06s
 
 monoFont = ui-monospace, SFMono-Regular, "SF Mono", "Roboto Mono", Menlo, Consolas, "Liberation Mono", monospace
 
+CRXFont = -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji'
 
 // 注入当前页面的悬浮球样式
 .CRX-content
@@ -68,7 +69,7 @@ monoFont = ui-monospace, SFMono-Regular, "SF Mono", "Roboto Mono", Menlo, Consol
         border-radius: 30px
         padding: 5px
         color: gray2
-        font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji'
+        font-family: CRXFont
         font-size: 13px
         font-weight: 500
         cursor: pointer
