--- a/src/content/content.styl
+++ b/src/content/content.styl
@@ -297,6 +297,7 @@ div.P-configuration
             resize: none
             height 100% !important
             border: none
+            word-break: break-all
         .ant-form-item-row
             height: 100%
         .ant-form-item-control
